dfir_rs/examples/snapshots/example_1_simplest.snap
---
source: dfir_rs/examples/example_1_simplest.rs
expression: output
---
Hello 0
Hello 1
Hello 2
Hello 3
Hello 4
Hello 5
Hello 6
Hello 7
Hello 8
Hello 9
