dfir_rs/examples/snapshots/example_2_simple_1.snap
---
source: dfir_rs/examples/example_2_simple_1.rs
expression: output
---
Howdy 16
Howdy 17
Howdy 25
Howdy 26
Howdy 36
Howdy 37
Howdy 49
Howdy 50
Howdy 64
Howdy 65
Howdy 81
Howdy 82
