dfir_rs/examples/snapshots/example_3_stream.snap
---
source: dfir_rs/examples/example_3_stream.rs
expression: output
---
A
Ahoy, 16
Ahoy, 17
Ahoy, 25
Ahoy, 26
B
Ahoy, 36
Ahoy, 37
Ahoy, 49
Ahoy, 50
Ahoy, 64
Ahoy, 65
Ahoy, 81
Ahoy, 82
